[package]
name = "debug_inject_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
noldr = { git = "https://github.com/Teach2Breach/noldr.git", branch = "main" }
windows = { version = "0.58.0", features = ["Win32_System_SystemServices", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
winapi = { version = "0.3.9", features = ["processthreadsapi", "errhandlingapi", "libloaderapi", "psapi", "debugapi"]}
litcrypt = "0.3.0"